--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,28 +1,67 @@
-.App {
-  text-align: center;
+/* from https://milligram.io/ */
+.navigation {
+  background: #f4f5f6;
+  border-bottom: .1rem solid #d1d1d1;
+  display: block;
+  height: 5.2rem;
+  left: 0;
+  max-width: 100%;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 100%;
+  z-index: 1
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.navigation .container {
+  padding-bottom: 0;
+  padding-top: 0
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.navigation .navigation-list {
+  list-style: none;
+  margin-bottom: 0;
+  margin-right: 5rem
 }
 
-.App-title {
-  font-size: 1.5em;
+@media(min-width: 80rem) {
+  .navigation .navigation-list {
+      margin-right:0
+  }
 }
 
-.App-intro {
-  font-size: large;
+.navigation .navigation-item {
+  float: left;
+  margin-bottom: 0;
+  margin-left: 2.5rem;
+  position: relative
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.navigation .img {
+  fill: #9b4dca;
+  height: 2rem;
+  position: relative;
+  top: .3rem
+}
+
+.navigation .navigation-title,.navigation .title {
+  color: #606c76;
+  font-family: Gotham Rounded A,Gotham Rounded B,Helvetica Neue,Arial,sans-serif;
+  position: relative
+}
+
+.navigation .navigation-link,.navigation .navigation-title,.navigation .title {
+  display: inline;
+  font-size: 1.6rem;
+  line-height: 5.2rem;
+  padding: 0;
+  text-decoration: none
+}
+
+.navigation .navigation-link.active {
+  color: #606c76
+}
+
+#app > section.container {
+  margin-top: 6.5rem;
 }
